# TextffCut

./: .ai_context.json  .coveragerc  .dockerignore  .env.example  .gitignore  .mypy.ini  .performance_profile_json_example  2stage_architecture_implementation_summary.md  2stage_integration_complete.md  CLAUDE.md  COMPLETE_FEATURE_SUMMARY.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.optimized  Dockerfile.v097-final  Dockerfile.v097-optimized  FINAL_SUMMARY.md  INSTALL_FROM_ZIP.md  INSTALL_GUIDE_WINDOWS.md  INSTALL_WINDOWS.md  INVESTIGATION_REPORT.md  LICENSE  MANUAL_STARTUP_GUIDE.html  MIGRATION.md  Makefile  README-DOCKER.md  README.md  RELEASE_NOTES_v0.9.7.md  RELEASE_NOTES_v0.9.8.md  STANDALONE_REALITY_CHECK.md  START_DEBUG.bat  START_DEBUG_v2.bat  START_DEBUG_v3.bat  START_DEBUG_v4.bat  START_DEBUG_v5.bat  START_DEBUG_v6.bat  START_DEBUG_v7.bat  START_GUI.bat  START_GUI.command  START_SIMPLE.bat  (+268 more)
.github/: SETUP_AKIRA_METHOD.md
.serena/: project.yml
.streamlit/: config.toml
adapters/: README.md  __init__.py
api/: main.py
core/: __init__.py  alignment_diagnostics.py  alignment_processor.py  alignment_wrapper.py  async_processor.py  audio_optimizer.py  auto_optimizer.py  constants.py  disk_cache_manager.py  error_handling.py  error_handling_integration.md  error_migration.py  exceptions.py  export.py  fcpxml_relink.py  interfaces.py  japanese_line_break.py  memory_monitor.py  mlx_whisper_refine.py  models.py  models_typed.py  performance_profile.py  preview.py  queue_manager.py  retry_handler.py  segment_splitter.py  srt_diff_exporter.py  srt_exporter.py  srt_timing_adjuster.py  streaming.py  text_processor.py  time_mapper.py  timeline.py  timeline_processor.py  timeout_handler.py  timestamp_estimator.py  transcription.py  transcription_api.py  transcription_api_optimized.py  transcription_api_ultra_optimized.py  (+11 more)
desktop/: README.md  start-demo.sh  test_error_cases.js  test_error_handling.js  test_final_integration.js  test_frontend.js  test_integration.js  test_performance.js  test_separator_feature.js  test_summary.md
di/: __init__.py  bootstrap.py  config.py  containers.py  integration_example.py  main_integration.patch  providers.py
docs/: CHATGPT_INTEGRATION.md  DISTRIBUTION_GUIDE.md  DOCKER_GUIDE.md  GITHUB_ORG_SETUP.md  INSTALL.md  MANUAL_STARTUP_GUIDE.md  QUICKSTART.md  TROUBLESHOOTING.md  USER_GUIDE.md  basic_design_specification_v2.md  clean_architecture_basic_design.md  clean_architecture_detailed_design.md  clean_architecture_diagrams.md  clean_architecture_implementation_review.md  clean_architecture_migration_plan.md  clean_architecture_migration_report.md  clean_architecture_migration_status.md  clean_architecture_next_steps.md  cleanup_completion_report.md  cli_batch_transcription_design.md  custom_component_proposal.md  data_structures.md  davinci_resolve_srt_line_break_issue.md  desktop-app-comparison.md  desktop-app-proposal.md  detailed_design_specification.md  detailed_design_specification_v2.md  detailed_design_specification_v3.md  detailed_design_v3_text_processing_update.md  di_integration_guide.md  gui_settings_consistency_proposal.md  implementation_plan_context_marker.md  implementation_roadmap.md  interactive_waveform_selection_design.md  lcs_based_text_processing_design.md  lcs_implementation_plan.md  legacy_code_removal_plan.md  legacy_compatibility_analysis.md  legacy_removal_plan.md  local-server-explanation.md  (+51 more)
domain/: DOMAIN_RULES.md  README.md
hooks/: hook-streamlit.py
infrastructure/: README.md  davinci_resolve.py
logs/: test.txt
modules/: __init__.py  fcpxml_export.py  text_diff.py  transcription.py  ui_components.py  video_processing.py
optimizer_profiles/: optimizer_profile_small.json
orchestrator/: __init__.py  gc_optimizer.py  memory_manager.py  process_communication.py  processing_state_manager.py  transcription_worker.py  transcription_worker_process.py  transcription_worker_with_recovery.py  worker_lifecycle_manager.py
presentation/: di_config.py
prompts/: anchor_detection.md  buzz_clip.md  clip_suggestions_v2.md  se_placement.md  title_image_candidates.md  title_image_candidates_from_srt.md  title_image_design.md
scripts/: README_DIST.txt  build_distribution.sh  common-functions.bat  compare_model_results.py  compare_whisperx_vs_mlx.py  create_docker_release.sh  create_release.sh  create_release_package.sh  docker-entrypoint.sh  docker-run.sh  download_models.py  download_models_alt.py  experiment_phase1_format.py  generate_license_key.py  generate_srt_comparison.py  migrate_buzz_clip_cache.py  model_comparison_test.sh  preload_models.py  prepare_offline_models.py  setup_wsl2.bat  start-clean.bat  start-clean.sh  start-dev-improved.bat  start-dev.bat  start-dev.sh  start.sh  start_with_preload.sh  validate_api_schema.py
services/: __init__.py  base.py  base_updated.py  chatgpt_service.py  configuration_service.py  export_service.py  integration_service.py  text_editing_service.py  timeline_editing_service.py  transcription_service.py  video_processing_service.py  video_processing_service_typed.py  workflow_service.py
test_output/: test_medium_1m_edited_20250613_233736.fcpxml  timeline_overview.html  waveform_seg001.html  waveform_seg002.html  waveform_seg003.html
tests/: analyze_edge_cases.py  compare_estimation.py  conftest.py  puppeteer_test_simple.py  run_e2e_test.py  run_puppeteer_test.sh  test_abnormal_timestamp.py  test_alignment_diagnostics.py  test_boundary_markers.py  test_constants.py  test_context_pattern.py  test_final_validation.py  test_new_estimation.py  test_onepage_integration.py  test_parameter_fix.py  test_performance_optimization.py  test_phase2_integration.py  test_refactoring_complete.py  test_refactoring_integration.py  test_service_integration.py  test_smoke.py  test_text_search.py  test_text_search_detail.py  test_type_hints.py  test_waveform_processor.py  test_words_based_search.py  test_worker_integration.py  test_worker_refactored.py
tests_old_backup/: README.md  analyze_timestamp_issue.py  puppeteer_commands.md  puppeteer_executable_commands.json  run_e2e_test.py  (+7 more)
(+512 files in other folders)
