[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "textffcut"
version = "2.0.0"
description = "TextffCut CLI - Apple Silicon Mac用バッチ文字起こしツール"
requires-python = ">=3.11"
dependencies = [
    "dependency-injector>=4.41.0",
    "rich>=13.0.0",
    "ffmpeg-python>=0.2.0",
    "pydub>=0.25.1",
    "numpy>=1.26.0,<2.0",
    "tqdm>=4.66.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "janome>=0.5.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "mlx-whisper>=0.4.0",
    "mlx-forced-aligner>=0.1.0",
]

[project.urls]
Homepage = "https://note.com/coidemo"

[project.optional-dependencies]
ui = [
    "streamlit>=1.45.0",
    "plotly>=5.18.0",
    "librosa>=0.10.0",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
]

[project.scripts]
textffcut = "textffcut_cli.command:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
# textffcut_cli に加え、CLI が依存するクリーンアーキテクチャの各層を含める
include = [
    "textffcut_cli*",
    "domain*",
    "use_cases*",
    "adapters*",
    "di*",
    "utils*",
    "infrastructure*",
    "application*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # 段階的に true に移行
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = false  # ジェネリック型の使用を許可
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

# サードパーティライブラリの設定
[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "faster_whisper.*",
    "pyannote.*",
    "torch.*",
    "numpy.*",
    "pandas.*",
    "matplotlib.*",
    "seaborn.*",
    "psutil.*",
    "ffmpeg.*"
]
ignore_missing_imports = true

# 段階的な型チェック強化
[[tool.mypy.overrides]]
module = [
    "core.types",
    "core.models_typed",
    "core.error_handling",
    "services.base_updated",
    "services.video_processing_service_typed"
]
disallow_untyped_defs = true
strict = true

[[tool.mypy.overrides]]
module = [
    "services.*",
    "core.*"
]
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "main",
    "utils.*",
    "ui.*"
]
disallow_untyped_defs = false
check_untyped_defs = false

# テストファイルは緩い設定
[[tool.mypy.overrides]]
module = "test_*"
ignore_errors = true

[tool.ruff]
# 行の長さ
line-length = 120

# Python バージョン
target-version = "py311"

# 除外パターン
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "*.egg-info",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Ruffの設定（型アノテーション関連）
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "ANN",    # flake8-annotations (型ヒント)
]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102",  # Missing type annotation for cls in classmethod
    "ANN401",  # Dynamically typed expressions (Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
# テストファイルは型アノテーション不要
"test_*.py" = ["ANN"]
"*_test.py" = ["ANN"]

# 設定ファイルも型アノテーション不要
"config.py" = ["ANN"]
"setup.py" = ["ANN"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true